// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widgets/ProjectHeader _4x3Image smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          Project Title
        </h2>
        <p>
          Job Title
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              TypeScript
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Tailwind CSS
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/800x600?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/800x600?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;

exports[`Widgets/ProjectHeader _16x9Image smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          Project Title
        </h2>
        <p>
          Job Title
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              TypeScript
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Tailwind CSS
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/1920x1080?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/1920x1080?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;

exports[`Widgets/ProjectHeader LongData smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          This is a very long title that should not be truncated
        </h2>
        <p>
          This is a very long job title that should not be truncated
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              This is a second very long stack name that should not be truncated
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              This is a fourth very long stack name that should not be truncated
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/1920x1080?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/1920x1080?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;

exports[`Widgets/ProjectHeader LongJobTitle smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          Project Title
        </h2>
        <p>
          This is a very long job title that should not be truncated
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              TypeScript
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Tailwind CSS
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/1920x1080?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/1920x1080?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;

exports[`Widgets/ProjectHeader LongStackName smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          Project Title
        </h2>
        <p>
          Job Title
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              This is a second very long stack name that should not be truncated
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              This is a fourth very long stack name that should not be truncated
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/1920x1080?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/1920x1080?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;

exports[`Widgets/ProjectHeader LongTitle smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          This is a very long title that should not be truncated
        </h2>
        <p>
          Job Title
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              TypeScript
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Tailwind CSS
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/1920x1080?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/1920x1080?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;

exports[`Widgets/ProjectHeader Playground smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          Project Title
        </h2>
        <p>
          Job Title
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              TypeScript
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Tailwind CSS
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/1920x1080?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/1920x1080?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;

exports[`Widgets/ProjectHeader SquareImage smoke-test 1`] = `
<main class="inter-normal">
  <div class="src-widgets-ProjectHeader-ProjectHeader-stories-module__root--hHMpH">
    <div class="src-widgets-ProjectHeader-ProjectHeader-module__root--ZnpQA">
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__titleContainer--eg7T9">
        <h2>
          Project Title
        </h2>
        <p>
          Job Title
        </p>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__stackContainer--WS2tI">
        <ul class="src-widgets-MainStack-MainStack-module__root--dscGt">
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              React
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              TypeScript
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Next.js
            </div>
          </li>
          <li>
            <div class="src-components-Tag-Tag-module__rootStyle--Cd2YJ"
                 data-testid="tag-component"
                 tabindex="-1"
            >
              Tailwind CSS
            </div>
          </li>
        </ul>
      </div>
      <div class="src-widgets-ProjectHeader-ProjectHeader-module__linkContainer--Xyp1T">
        <a class="src-components-Link-Link-module__root--ggyqZ src-components-Link-Link-module__secondary--tiYlA"
           data-testid="link-component"
           href="/"
        >
          Voir le projet
        </a>
      </div>
      <a class="src-widgets-ProjectHeader-ProjectHeader-module__imageContainer--hhsDI"
         href="/"
      >
        <img alt="Project Image"
             fetchpriority="high"
             width="0"
             height="0"
             decoding="async"
             data-nimg="1"
             class="src-widgets-ProjectHeader-ProjectHeader-module__image--BDZ5_"
             srcset="https://via.placeholder.com/500x500?w=16&amp;q=75 1x"
             src="https://via.placeholder.com/500x500?w=16&amp;q=75"
             style="color: transparent;"
        >
      </a>
    </div>
  </div>
</main>
`;
